--- a/STA380Exercises_Ofunrein_Pflum_Robinson_Vincent.Rmd
+++ b/STA380Exercises_Ofunrein_Pflum_Robinson_Vincent.Rmd
@@ -3,9 +3,9 @@ title: "Predictive Modeling Exercises"
 author: "Kessiena Ofunrein, Jordan Pflum, Jennifer Robinson, and Katelyn Vincent"
 date: "8/8/2020"
 output:
+  pdf_document: default
   html_document:
     df_print: paged
-  pdf_document: default
 editor_options:
   chunk_output_type: console
 header-includes:
@@ -125,6 +125,8 @@ nongreen.denplot(subset_Nongreen, "Rent Distribution (Subset, Non-Green Building
 Additionally, while the original analysis factored in expected revenue differences, it failed to account for differences in electricity cost savings over the year from “going green”.  Only three percent of all buildings (and six percent of green buildings) in the original dataset have rent quoted on a “net contract” basis, where the tenant pays for utility costs, which means that the majority of utility costs are paid by the building owners.  
 Estimated annual electricity costs for a non-green building were computed using the building size (250,000 sq ft), avg number of kWh per square foot for commercial buildings (22.5), and median electricity costs for buildings in the subset.  The annual electricity costs for the green building assumed a 25 percent reduction in energy usage.  To compute revenue, the median occupancy rate was multiplied by the median rent (for green and non-green buildings in the subset, separately).  Below is the break-even analysis for a new green building, which takes into account the difference in costs and expected revenues compared to the construction of a non-green building.  Based on this analysis, the additional costs of the green building would be recouped in 9.5 years.
 ```{r,fig.align='center',echo=FALSE}
+knitr::opts_chunk$set(fig.width=7, fig.height=5)
+
 #####################################################
 # plot break even analysis
 #####################################################
@@ -197,6 +199,8 @@ ggplot(data = breakeven, aes(x = years)) +
 ```
 One possible confounding variable for the relationship between rent and green status in the initial analysis could be the building class.  Almost 80% of all green buildings are Class A buildings, which are the highest quality buildings in a market, whereas only 36 percent of non-green buildings have a Class A designation.  Since Class A buildings command a much higher rent than other building types, what appeared to be a higher rent for ‘green’ buildings could be attributed to the fact that most of them are of a higher quality building type.  
 ```{r,fig.align='center',echo=FALSE}
+knitr::opts_chunk$set(fig.width=5.5, fig.height=3)
+
 #####################################################
 # plot rent distribution for class a buildings (all)
 #####################################################
@@ -570,6 +574,242 @@ ggmap(map) + geom_point(data=depatureDealysPerAirport, aes(x=longitude, y=latitu
 ```
 
 # Question 3
+```{r,include=FALSE}
+############ Setup ############ 
+#### Libraries ####
+library(quantmod)
+library(timeSeries)
+library(fPortfolio)
+library(PerformanceAnalytics)
+library(ggplot2)
+
+
+# Bootstrapping
+library(mosaic)
+
+# Optimization
+library(PortfolioAnalytics)
+library(DEoptim)
+library(ROI)
+require(ROI.plugin.glpk)
+require(ROI.plugin.quadprog)
+
+#### Get Returns ####
+# Portfolio
+tickers <- c("AGG", "GLD", "VUG")
+
+# Get AdjClose prices
+adjClosePrices <- NULL
+for (ticker in tickers){
+  adjClosePrices <- cbind(adjClosePrices,
+                          quantmod::getSymbols(ticker, from="2015-08-01", to = '2020-08-01', verbose=FALSE, auto.assign=FALSE)[,6])
+}
+
+# keep only the dates that have closing prices for all tickers
+adjClosePrices <- adjClosePrices[apply(adjClosePrices,1,function(x) all(!is.na(x))),]
+
+# Convert AdjClose to Returns
+returns <- Return.calculate(adjClosePrices)[-1,1:length(tickers)]
+
+############ Construct Portfolios ############ 
+#### Portfolio 1 ####
+port1_weights <- c(0.8, 0.15, 0.05)
+
+# Create portfoli (Rebalancing Daily) 
+port1_returns <- Return.portfolio(returns, weights = port1_weights, rebalance_on = "days")
+
+#### Portfolio 2 ####
+port2_weights <- c(0.1, 0.2, 0.7)
+
+# Create portfoli (Rebalancing Daily) 
+port2_returns <- Return.portfolio(returns, weights = port2_weights, rebalance_on = "days")
+
+#### Portfolio 3 ####
+portfolioAssets <- colnames(returns)
+init <- portfolio.spec(assets=portfolioAssets)
+# Add Constraint (Weights sum to 1, ie full investment)
+init <- add.constraint(portfolio=init,
+                       type="weight_sum",
+                       min_sum=1,
+                       max_sum=1)
+
+# Add Constraint (No shorting or borrowing, and no over/under investment)
+init <- add.constraint(portfolio=init,
+                       type="box",
+                       min=0.05,
+                       max=0.5
+)
+
+# Add Constraint (Target Return = 10% annual, 0.00055% daily)
+init <- add.constraint(portfolio=init, type="return", return_target=0.00055)
+
+# Add Objective (Minimize risk)
+minvar <- add.objective(portfolio=init,
+                        type='risk',
+                        name='var'
+)
+
+# Optimize Portfolio
+opt_maxret <- optimize.portfolio(R=returns, portfolio=minvar,
+                                 optimize_method="ROI",
+                                 trace=FALSE
+)
+
+# Create portfoli (Rebalancing Daily) 
+port3_returns <- Return.portfolio(returns, weights = opt_maxret$weights, rebalance_on = "days")
+
+
+#### Bench Mark Portfolio ####
+tickers <- c("SPY")
+
+# Get AdjClose prices
+adjClosePrices <- NULL
+for (ticker in tickers){
+  adjClosePrices <- cbind(adjClosePrices,
+                          quantmod::getSymbols(ticker, from="2015-08-01", to = '2020-08-01', verbose=FALSE, auto.assign=FALSE)[,6])
+}
+
+# keep only the dates that have closing prices for all tickers
+adjClosePrices <- adjClosePrices[apply(adjClosePrices,1,function(x) all(!is.na(x))),]
+
+# Convert AdjClose to Returns
+#returns <- as.timeSeries((tail(adjClosePrices,-1) / as.numeric(head(adjClosePrices,-1)))-1)
+market_returns <- Return.calculate(adjClosePrices)[-1,]
+```
+Our group chose to construct a simple portfolio of three ETFs: iShares Core U.S. Aggregate Bond ETF (AGG), SPDR Gold Shares (GLD), Vanguard Growth Index Fund ETF Shares (VUG). We chose AGG because it is considered a relatively safe investment and would help mitigate the volatility of VUG. Additionally, we selected GLD, an ETF which tracks the price of Gold (about 1/10) as Gold has been a hot commodity in the wake of COVID-19 and the expected rise in inflation rates. Figure 1 depicts the Cumulative Return, Daily Return, and Drawdown of each of the assets.
+```{r,fig.align='center',echo=FALSE}
+knitr::opts_chunk$set(fig.width=7, fig.height=5)
+
+charts.PerformanceSummary(returns,main='Portfolio Assets Summary', rf=.0071)
+```
+The top chart unsurprisingly shows that VUG has the highest cumulative return over the past five years (as it is the most risky investment of the three) and AGG as the lowest. However, it is also apparent that GLD has high returns in the past 6 months and nears the cumulative return of VUG. The bottom graph depicts the drawdown for every asset during each period. The drawdown of an asset refers to how much an investment or trading account is down from the peak before it recovers back to the peak. Therefore, it is generally a good measure of the negative risk of an asset.
+```{r,fig.align='center',echo=FALSE}
+knitr::opts_chunk$set(fig.width=5.5, fig.height=3)
+
+chart.RiskReturnScatter(returns, add.sharpe = TRUE, Rf=.0071)
+```
+Figure 1 does not do the best job of displaying the return of an asset in respect to the risk taken on. Therefore, Figure 2 plots the annualized return for every asset vs annualized risk (SD). You can see that VUG has the highest risk of all three assets but the also the highest return. One last graph that is useful to examine is each of the assets relative performance to the market. To simplify things, we used SPY, and ETF that track the S and P500, as our market proxy. Figure 3 shows each of the assets performance relative to SPY. If SPY were graphed, it would be a horizontal line intersection the y-axis at 1. Therefore, whenever an asset is above 1, they are performing better than the market.
+```{r,fig.align='center',echo=FALSE}
+chart.RelativePerformance(apply.weekly(returns, Return.cumulative), apply.weekly(market_returns, Return.cumulative), legend.loc='topright')
+
+```
+We can see that VUG has consistently been beating the market while the less risky assets GLD and AGG have not, although GLD has made a recent push above the market.
+
+These three figures confirm our initial thoughts of the risk-reward ratio of each of the assets and why we chose them to comprise our portfolio. However, we then needed to decide how much to invest in each of the assets in our portfolio. 
+
+We decided for our first portfolio, Portfolio 1, we would create a very safe portfolio to satisfy a client who was risk-averse. Therefore, we invested heavily in AGG (0.8), lightly in GLD (0.15) and almost nothing in VUG (0.05). 
+
+For our second portfolio we decided to invest risky, perhaps for a young client with a lot of new wealth and in the position to take on financial risk. For this portfolio, Portfolio 2, we invested heavily in VUG (0.7), moderately in GLD (0.2) and lightly in AGG (0.1). 
+
+Lastly, we constructed our third portfolio by optimizing our portfolio (in respect to Variance)  subject to a set of constraints:
+
+1. Full Investment: $\sum_{i}w_i = 1, \forall$ portfolios
+2. No Over/Under Investment: $0.05 \leq w_i \leq 0.5 \forall$ portfolios
+3. Target Return (about 10 percent annual): $w' \bar\mu = 0.00055$
+Our objective was to minimize the variance of the portfolio given the constraints listed above. This resulted in a portfolio with:
+
+* $w_{AAG} = 0.0659$
+* $w_{GLD} = 0.500$
+* $w_{VUG} = 0.4341$
+A summary of our portfolio weights can be seen in Table 1.
+
+![Table 1](shot1.png)
+
+The portfolios constructed above yielded the following numbers (monthly) (Table2):
+
+![Table 2](shot2.png)
+The table does a nice job of summarizing the portfolios. Portfolio 1, which is the safest of the three, has the lowest return and the lowest VaR. However, although Portfolio 2 has a higher return than portfolio 3, it has a much higher risk and VaR than Portfolio 3 and therefore a considerably lower Sharpe Ratio. Because Portfolio 3 was optimized, it had a much better relative performance than Portfolio 2.
+```{r,fig.align='center',echo=FALSE}
+############ VaR Calculation ############
+#### Conceptual ####
+conceptualCaR <- function(portfolio, confidence){
+  portfolio_resampled <- mosaic::resample(portfolio)
+  portfolioReturns <- coredata(portfolio_resampled$portfolio.returns)
+  sortedPortfolioReturns <- sort(portfolioReturns, decreasing=FALSE)
+  port_dailyVar <- quantile(sortedPortfolioReturns,c(confidence))
+  port_monthlyVaR <- port_dailyVar*sqrt(20)
+  return(port_monthlyVaR)
+}
+
+# Analysis (Port 1)
+# Bootstrap
+monthlyVaR_bootstrap = do(1000)*conceptualCaR(port1_returns,.05)
+port1_montlyVaR <- mean(monthlyVaR_bootstrap$X5.)
+
+# Analysis (Port 2)
+# Bootstrap
+monthlyVaR_bootstrap = do(1000)*conceptualCaR(port2_returns,.05)
+port2_montlyVaR <- mean(monthlyVaR_bootstrap$X5.)
+
+
+# Analysis (Port 3)
+# Bootstrap
+monthlyVaR_bootstrap = do(1000)*conceptualCaR(port3_returns,.05)
+port3_montlyVaR <- mean(monthlyVaR_bootstrap$X5.)
+
+#### Normal ####
+# Analysis (Port 1)
+# Bootstrap
+dailyVaR_bootstrap = do(1000)*PerformanceAnalytics::VaR(mosaic::resample(port1_returns))
+port1_montlyVaR <- mean(dailyVaR_bootstrap$VaR)*sqrt(20)
+
+# Analysis (Port 2)
+# Bootstrap
+dailyVaR_bootstrap = do(1000)*PerformanceAnalytics::VaR(mosaic::resample(port2_returns))
+port2_montlyVaR <- mean(dailyVaR_bootstrap$VaR)*sqrt(20)
+
+
+# Analysis (Port 3)
+# Bootstrap
+dailyVaR_bootstrap = do(1000)*PerformanceAnalytics::VaR(mosaic::resample(port3_returns))
+port3_montlyVaR <- mean(dailyVaR_bootstrap$VaR)*sqrt(20)
+
+
+
+
+#### Graphing ####
+# Returns
+port1_monthly = apply.weekly(port1_returns, Return.cumulative)
+port1 <- data.frame(port1_monthly)
+port1$portfolio <- 'Portfolio 1'
+
+port2_monthly = apply.weekly(port2_returns, Return.cumulative)
+port2 <- data.frame(port2_monthly)
+port2$portfolio <- 'Portfolio 2'
+
+port3_monthly = apply.weekly(port3_returns, Return.cumulative)
+port3 <- data.frame(port3_monthly)
+port3$portfolio <- 'Portfolio 3'
+
+portfolioReturns <- rbind(port1, port2, port3)
+
+# Portfolio VaRs
+port1_VaR <- data.frame(PortfolioVaR=port1_montlyVaR)
+port1_VaR$portfolio <- 'Portfolio 1'
+
+port2_VaR <- data.frame(PortfolioVaR=port2_montlyVaR)
+port2_VaR$portfolio <- 'Portfolio 2'
+
+port3_VaR <- data.frame(PortfolioVaR=port3_montlyVaR)
+port3_VaR$portfolio <- 'Portfolio 3'
+
+portfolioVaRs <- rbind(port1_VaR, port2_VaR, port3_VaR)
+
+
+ggplot(portfolioReturns, aes(portfolio.returns, fill = portfolio)) + 
+  geom_density(alpha = 0.2) + 
+  geom_vline(data=portfolioVaRs, aes(xintercept=PortfolioVaR, color = portfolio), linetype="dashed") + 
+  ggtitle("Historical Returns (Monthly) vs VaR") +
+  xlab("Returns")
+```
+Figure 4 does a good job of illustrating the table information. With little risk, Portfolio 1’s distribution is skinny and high, indicating narrow but consistent returns. However, although Portfolio 2’s and 3’s returns are very similar, Portfolio 2’s risk and VaR are a lot lower. This can most noticeably be seen in the levels of VaR (plotted as dashed vertical lines). The interpretation of the VaR line is simple: 
+* VaR(95) = -4.033 Implies your portfolio has a 5 percent chance of losing 4.033 percent or more in a given month.
+It is also useful to translate our portfolio to dollars. Let's assume that we have 100,000 dollars to invest in our portfolio. Table 3 shows the monthly Expected Return, Risk, and VaR of each portfolio. For example, in any given month, our portfolio (3) would be expected to grow on average 1,105 dollars. We would be 95 percent confident that it would grow within the range of -5057 dollars and 7,267 dollars. Finally, we would expect there to be a 5 percent chance that we would lose 4,022 dollars in any given month.
+![Table 3](shot3.png)
+
+
+
+
 # Question 4
 ```{r}
 
@@ -623,7 +863,7 @@ itemFrequencyGGPlot <- function(x, topN) {
 itemFrequencyGGPlot(groceries, topN=20)
 ```
 On the other end, the least frequently purchased items include a lot of non-food items, including toiletries (hairspray, makeup remover), cleaning and organization products (rubbing alcohol, toilet cleaner, bags), and baby products (baby food and baby cosmetics).  
-```{r,,fig.align='center',echo=FALSE}
+```{r,fig.align='center',echo=FALSE}
 # plot least purchased items
 itemFrequencyGGPlot <- function(x, topN) {
   x %>%
